// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - UnorderedList renders JSX children 1`] = `
<ul
  className="sc-bwzfXH gjGEUQ"
>
  <li
    className="sc-bdVaJa DYeZc"
  >
    <span>
      one
    </span>
  </li>
  <li
    className="sc-bdVaJa DYeZc"
  >
    <span>
      two
    </span>
  </li>
</ul>
`;

exports[`Component - UnorderedList renders empty list if items is empty array 1`] = `
<ul
  className="sc-bwzfXH gjGEUQ"
/>
`;

exports[`Component - UnorderedList renders list with JSX items 1`] = `
<ul
  className="sc-bwzfXH gjGEUQ"
>
  <li
    className="sc-bdVaJa DYeZc"
  >
    <span>
      one
    </span>
  </li>
  <li
    className="sc-bdVaJa DYeZc"
  >
    <span>
      two
    </span>
  </li>
</ul>
`;

exports[`Component - UnorderedList renders list with plain text items 1`] = `
<ul
  className="sc-bwzfXH gjGEUQ"
>
  <li
    className="sc-bdVaJa DYeZc"
  >
    one
  </li>
  <li
    className="sc-bdVaJa DYeZc"
  >
    two
  </li>
</ul>
`;

exports[`Component - UnorderedList renders nothing if no items or children provided 1`] = `null`;
